# voicebridge

./: .env.codesign.example  .env.example  .gitignore  Dockerfile  PROJE_OZETI.md  README.md  nixpacks.toml  railway.toml  requirements.txt  start.sh
.cursor/rules/: voicebridge-sprint.mdc  voicebridge.mdc
.github/workflows/: build.yml  deploy-server.yml
.github/workflows/disabled/: deploy-website.yml
app/: .env.example  .env.local  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
app/electron/: device-list-fork.js  main.js  preload.js
app/src/: App.jsx  index.css  languages.js  main.jsx
app/src/components/: DeviceSelector.jsx  ErrorBoundary.jsx  GlossaryEditor.jsx  LanguageSelector.jsx  LicenseGate.jsx  LiveConversationPanel.jsx  Onboarding.jsx  PlatformGuide.jsx  SessionSummary.jsx  SetupWizard.jsx  SignIn.jsx  StatusPanel.jsx  TranscriptBox.jsx  VoiceGenderSelector.jsx
app/src/components/ui/: ModalProvider.jsx
app/src/lib/: firebase.js
backend/: config.py  main.py
backend/services/: stt.py  translation.py  tts.py
backend/utils/: audio.py
core/: CMakeLists.txt  binding.gyp  index.js  package-lock.json  package.json
core/addon/: addon.cpp
core/include/: AudioCapture.h  AudioPipeline.h  PhraseDetector.h  VAD.h
core/src/: AudioCapture.cpp  AudioPipeline.cpp  PhraseDetector.cpp  VAD.cpp
docs/: DOMAIN_SETUP.md  FIREBASE_SETUP.md  MACOS_DEV.md  MVP_CHECKLIST.md  NEXT_SPRINT.md  RELEASE.md  STATUS.md  UNINSTALL_MACOS.md
drivers/macos/: CMakeLists.txt  CODESIGN.md  Info.plist  README.md  ShmWriter.cpp  ShmWriter.h  VoiceBridgeDriver.cpp  VoiceBridgeDriver.h
drivers/windows/: README.md  WinVirtualMic.cpp  WinVirtualMic.h  installer.nsi
extension/: README.md  manifest.json  package.json
extension/background/: service-worker.js
extension/content/: content.js  panel.css
extension/injected/: page-bridge.js
extension/lib/: shared.js
extension/offscreen/: offscreen.html  offscreen.js
extension/popup/: popup.html  popup.js
extension/tests/: run-checks.mjs
scripts/: _codesign-env.sh  build-dmg.sh  clean-install-macos.sh  dev-server.sh  install-driver.sh  notarize-driver.sh  sign-and-package.sh
server/: .env.example  Dockerfile  alembic.ini  config.py  database.py  languages.py  main.py  models.py  pricing.py  railway.toml  requirements.txt  voicebridge.db  voices.py
server/alembic/: env.py
server/alembic/versions/: 001_initial.py
server/services/: auth.py  email.py  glossary.py  license.py  noise_filter.py  optimizations.py  payments.py  pipeline_ai.py  resilience.py  stt.py  stt_openai.py  translate.py  translate_gemini.py  translate_groq.py  tts_proxy.py
tests/: conftest.py  test_auth.py  test_voicebridge.py
website/: .env.example  next.config.mjs  package-lock.json  package.json  tsconfig.tsbuildinfo  vercel.json
website/messages/: de.json  en.json  es.json  fr.json  hi.json  ja.json  pt.json  tr.json  zh.json
website/src/: i18n.ts  middleware.ts
website/src/app/: globals.css  layout.tsx  not-found.tsx
website/src/app/[locale]/: layout.tsx  page.tsx
website/src/app/[locale]/dashboard/: page.tsx
website/src/app/[locale]/download/: page.tsx
website/src/app/[locale]/pricing/: page.tsx
website/src/app/api/checkout/: route.ts
website/src/app/api/order-status/: route.ts
website/src/app/api/stripe/webhook/: route.ts
website/src/components/: FiberScene.tsx  Footer.tsx  GlobeHero.tsx  GlobeScene.tsx  MicScene.tsx  Navbar.tsx
website/src/lib/: auth.tsx  firebase.ts
